[Transform] Refactor headers
Refactors headers into its own class and separates security headers from
non-security headers.